# amdslingshot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  JalNetra - AMD Slingshot Submission.pptx  JalNetra - System Design Document.md  LICENSE  Makefile  Project Submission Deck _ AMD Slingshot.pptx  README.md  SECURITY.md  TeamInformation.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
cloud/: bigquery_schema.sql
cloud/functions/: ingest.py
cloud/terraform/: main.tf  outputs.tf  variables.tf
dashboard/: index.html  package.json  tsconfig.app.json  vite.config.ts
dashboard/public/: manifest.json  sw.js
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: AlertBanner.tsx  Header.tsx  MapView.tsx  SensorCard.tsx  Sidebar.tsx  StatusBadge.tsx  TrendChart.tsx  WaterQualityGauge.tsx
dashboard/src/hooks/: useAlerts.ts  useReadings.ts  useWebSocket.ts
dashboard/src/i18n/: i18n.ts
dashboard/src/pages/: Alerts.tsx  Dashboard.tsx  FarmerView.tsx  Nodes.tsx  Predictions.tsx  Reports.tsx
dashboard/src/services/: api.ts  websocket.ts
dashboard/src/stores/: appStore.ts
dashboard/src/types/: index.ts
deploy/nginx/: jalnetra.conf
deploy/scripts/: deploy.sh  setup-gcp-vm.sh  startup.sh
deploy/systemd/: jalnetra.service
docs/: 01-about.md  02-eligibility.md  03-themes.md  04-evaluation-criteria.md  05-prizes.md  06-timeline.md  07-campus-days.md  08-faqs.md  09-amd-technology-stack.md  10-past-winners-reference.md
docs/ideas/: 01-kavachnet-cybersecurity.md  02-jalnetra-green-tech.md  03-vanisetu-social-good.md
edge/: config.py  database.py  main.py
edge/api/: alerts.py  health.py  nodes.py  predictions.py  readings.py  reports.py  sync.py
edge/models/: __init__.py  anomaly_detector.py  data_generator.py  depletion_predictor.py  inference_engine.py  irrigation_optimizer.py
edge/services/: alert_dispatcher.py  cloud_sync.py  data_ingestion.py  lora_receiver.py  model_service.py  websocket_manager.py
edge/tests/: conftest.py  test_api.py  test_models.py  test_validators.py
edge/utils/: logging.py  validators.py
firmware/: platformio.ini
firmware/src/: main.cpp
reference/: deployment-blueprints.md
training/notebooks/: 01_data_exploration.ipynb
training/scripts/: generate_dataset.py  train_all_models.py
