# =============================================================================
# JalNetra - Python Project Configuration
# Edge-AI Water Quality Monitoring System
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jalnetra"
version = "1.0.0"
description = "JalNetra - Edge-AI Water Quality Monitoring System for Rural India"
readme = "JalNetra - System Design Document.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "JalNetra Team"},
]
keywords = [
    "water-quality",
    "edge-ai",
    "iot",
    "machine-learning",
    "environmental-monitoring",
    "rural-india",
    "fastapi",
    "onnx",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Typing :: Typed",
]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "onnxruntime>=1.20.0",
    "torch>=2.5.0",
    "xgboost>=2.1.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "onnx>=1.17.0",
    "skl2onnx>=1.17.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "Pillow>=11.0.0",
    "jinja2>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
training = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "jupyter>=1.1.0",
    "notebook>=7.3.0",
    "optuna>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/jalnetra"
Documentation = "https://github.com/your-org/jalnetra/wiki"
Repository = "https://github.com/your-org/jalnetra"
Issues = "https://github.com/your-org/jalnetra/issues"

[project.scripts]
jalnetra = "edge.api.main:run"

# ---------------------------------------------------------------------------
# Tool Configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
include = ["edge*", "training*"]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "S101",   # allow assert in tests
    "S603",   # allow subprocess calls
    "S608",   # allow SQL formatting
    "B008",   # allow function calls in defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"edge/tests/**/*.py" = ["S101", "S106"]
"training/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["edge", "training"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "onnxruntime.*",
    "xgboost.*",
    "skl2onnx.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["edge/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
    "--cov=edge",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "ml: marks machine learning model tests",
]

[tool.coverage.run]
source = ["edge"]
omit = [
    "edge/tests/*",
    "edge/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
